# Simulation_interface

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  README.md  docker-compose.yml  plan.md
.github/workflows/: ci.yml
backend/: conftest.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: results.py  runs.py  system.py  workload.py
backend/app/orchestrator/: astra_runner.py  chakra_tools.py  pipeline.py  stg_runner.py
backend/app/parsers/: astra_logs.py  et_traces.py  ns3.py
backend/app/schemas/: memory_config.py  network_config.py  ns3_config_parser.py  stg_spec.py  system_config.py
backend/app/schemas/presets/: gpt3-175b.json  llama-70b.json  llama-7b.json
backend/app/storage/: fs_layout.py  registry.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_health.py  test_api_results.py
backend/tests/smoke/: test_ns3_cc_mode_experimental.py  test_ns3_reference_run.py  test_reference_runs.py
backend/tests/unit/: test_astra_runner.py  test_backend_adapter.py  test_health.py  test_network_config_ns3.py  test_ns3_config_parser.py  test_ns3_parsers.py  test_parsers.py  test_pipeline_classify.py  test_pipeline_materialize.py  test_schemas.py
docker/: builder.Dockerfile
docs/: developer-manual.md  user-manual.md
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/lib/: api.ts
scripts/: bootstrap.sh  build_backends.sh
scripts/test/: test_backend_health.sh  test_config_api.sh  test_frontend_build.sh  test_full_pipeline.sh  test_run_lifecycle.sh  test_workload_api.sh
(+15 files in other folders)
